Stop calendar legend from overflowing

--- a/frontend/src/Calendar/calendar.less
+++ b/frontend/src/Calendar/calendar.less
@@ -293,7 +293,7 @@
       list-style: none;
 
       @media (max-width: @screen-xs-min) {
-        width: 400px;
+        width: 100%;
       }
     }
 
